
cc_library(
	name = "parameter",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_optional//:optional",
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_detail//:detail",
		"@com_github_bazelboost_python//:python"
	],
)
